# rg2026-predict

./: .gitignore  Makefile  README.md  pyproject.toml
data/elo/: current_ratings.parquet  elo_history.parquet
data/processed/: matches.parquet  player_id_map.parquet  players.parquet
docs/: RG26-PREDICT-PRD.md
src/: config.py
src/data/: clean.py  features.py  fetch.py
src/elo/: engine.py
src/model/: baseline.py  evaluate.py  train.py
src/simulate/: bracket.py  montecarlo.py
src/viz/: bracket_viz.py  feature_importance.py
tests/: conftest.py  test_elo.py  test_features.py  test_model.py  test_simulation.py
