[project]
name = "rg2026-predict"
version = "0.1.0"
description = "Roland Garros 2026 Men's Singles Winner Prediction"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3",
    "pyarrow>=15",
    "xgboost>=2.0,<3",
    "optuna>=3.6,<4",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "plotly>=5.20,<6",
    "joblib>=1.3,<2",
    "requests>=2.31,<3",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
